# HomeSite

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/homesite/: manage.py
backend/homesite/base/: urls.py  views.py
backend/homesite/budget/: forms.py  urls.py  views.py
backend/homesite/homesite/settings/: common.py
backend/homesite/users/: apps.py  forms.py
homesite/: .env  .env.template  db.sqlite3  main.py
homesite/base/: apps.py  urls.py  views.py
homesite/budget/: README.md  admin.py  apps.py  forms.py  models.py  queries.py  urls.py  views.py
homesite/budget/database/: database_create.py  models.py
homesite/budget/logic/: __init__.py  bank_account.py  categories.py  dashboard.py  operations.py  queries.py
homesite/budget/migrations/: 0001_initial.py  0002_auto_20240117_1118.py  0002_operation.py  0003_alter_operation_operation_date.py  0003_remove_category_cat_type_operation_operation_type.py  0004_bankaccount_operation_bank_account.py  0004_remove_operation_account_delete_account.py  0005_detalisationdimension_operation_detalisation_and_more.py  0006_alter_category_name.py  0007_category_cat_type.py  0008_operation_operation_period.py  0009_alter_operation_comment_alter_operation_detalisation.py  0011_operation_operation_period_alter_operation_category.py
homesite/controllers/: users.py
homesite/homesite/: asgi.py  settings.py  urls.py  wsgi.py
homesite/homesite/settings/: common.py  development.py  production.py
homesite/models/: database.py  models.py
homesite/routers/: budget.py
homesite/users/: urls.py  views.py
migrations/: env.py
src/: config.py  database.py  main.py  models.py
src/auth/: auth.py  crud.py  manager.py  models.py  router.py  schemas.py
src/budget/: __init__.py  crud.py  dependencies.py  models.py  router.py  schemas.py  users.py
src/budget/methods/: accounts.py  categories.py  operations.py
src/pages/: router.py
src/templates/: accounts.html  base.html  operations.html
templates/: index.html
templates/css/: style.css
(+26 files in other folders)
