[tool.poetry]
name = "homesite"
version = "0.1.0"
description = "Homesite for developers"
authors = ["Maxim Britvin <maksbritvin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
