[tool.poetry]
name = "homesite"
version = "0.1.0"
description = "Homesite for developers"
authors = ["Maxim Britvin <maksbritvin@gmail.com>"]
readme = "README.md"

[tool.black]
max-line-length = 120


[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.19.0"
pylint = "^3.0.3"
pylint-django = "^2.5.5"

[tool.poetry.group.prod.dependencies]
psycopg2 = "^2.9.9"

[tool.pylint.MAIN]
max-line-length= 120
suggestion-mode = 'yes'
load-plugins = [
    'pylint_django',
    ]
django-settings-module='homesite.settings.development'

[tool.pylint."MESSAGES CONTROL"]
disable='''
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring,
'''

[tool.pylint.REFACTORING]
# Maximum number of nested blocks for function / method body
max-nested-blocks = 5

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
